8201368: IfNode::fold_compares() may lead to incorrect execution

Reviewed-by: neliasso, kvn